force-app/main/default/objects/Gift__c/fields/Gift_Image__c.field-meta.xml
<CustomField>
    <fullName>Gift_Image__c</fullName>
    <formula>IMAGE( Gift_Image_Link__c , &quot; &quot; ,150,200)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gift Image</label>
    <type>Text</type>
</CustomField>