force-app/main/default/objects/Gift__c/fields/Gift_Image_Link__c.field-meta.xml
<CustomField>
    <fullName>Gift_Image_Link__c</fullName>
    <label>Gift Image Link</label>
    <type>Url</type>
</CustomField>