force-app/main/default/objects/Gift__c/fields/Gift_Name__c.field-meta.xml
<CustomField>
    <fullName>Gift_Name__c</fullName>
    <label>Gift Name</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>