force-app/main/default/objects/Gift__c/validationRules/Offer_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Offer_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>Offer_End_Date__c  &lt;  Offer_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Offer_End_Date__c</errorDisplayField>
    <errorMessage>Offer End Date should not be less than Offer Start Date</errorMessage>
</ValidationRule>