force-app/main/default/objects/Gift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Gift_Name__c</columns>
    <columns>Gift_Image__c</columns>
    <columns>Points__c</columns>
    <columns>Offer_Start_Date__c</columns>
    <columns>Offer_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>